@@ -1,6 +1,7 @@
 meegotouchhome (0.28.3~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#254917 - Revealing User-local .desktop file entries fail always the first time
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 18 May 2011 15:23:48 +0300
 
